Implement querying and async rendering of all results
